--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8" />
+  <title>Materials Calculator Center</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+<body>
+
+<h1>Materials Calculator Center</h1>
+<p>请选择一个在线计算器：</p>
+
+<p><a href="SchmidFactor.html" style="font-size:20px;">Schmid Factor Calculator</a></p>
+<p><a href="HallPetch.html" style="font-size:20px;">Hall–Petch Calculator</a></p>
+<p><a href="Orowan.html" style="font-size:20px;">Orowan Strengthening</a></p>
+
+<hr>
+<p style="color:#666;font-size:0.9em;">
+所有计算均使用 Pyodide（浏览器运行 Python），无需安装 Python。
+</p>
+
+</body>
+</html>
 
