--- a/EnergyWavelength.html
+++ b/EnergyWavelength.html
@@ -21,7 +21,7 @@
 <h3>Energy → Wavelength</h3>
 <label>Energy (keV)：</label>
 <input id="energy" type="number" step="0.001" min="0.001" max="1000" value="12.4">
-<button onclick="energyToWavelength()">计算 λ</button>
+<button onclick="energyToWavelength()">Calculate λ</button>
 
 <p id="result1" class="result"></p>
 
@@ -30,7 +30,7 @@
 <h3>Wavelength → Energy</h3>
 <label>Wavelength (nm)：</label>
 <input id="wavelength" type="number" step="0.000001" min="0.000001" value="0.1">
-<button onclick="wavelengthToEnergy()">计算 E</button>
+<button onclick="wavelengthToEnergy()">Calculate E</button>
 
 <p id="result2" class="result"></p>
 
@@ -39,7 +39,7 @@
 function energyToWavelength() {
   let E = parseFloat(document.getElementById("energy").value);
   if (isNaN(E) || E < 0.001 || E > 1000) {
-    document.getElementById("result1").textContent = "请输入 0.001 到 1000 之间的 Energy (keV)";
+    document.getElementById("result1").textContent = "Input Energy (keV) between 0.001-1000";
     return;
   }
 
@@ -54,7 +54,7 @@ function energyToWavelength() {
 function wavelengthToEnergy() {
   let lambda = parseFloat(document.getElementById("wavelength").value);
   if (isNaN(lambda) || lambda <= 0) {
-    document.getElementById("result2").textContent = "请输入有效的 Wavelength (nm)";
+    document.getElementById("result2").textContent = "Please enter a valid Wavelength (nm)";
     return;
   }
 
