--- a/EnergyWavelength.html
+++ b/EnergyWavelength.html
@@ -40,6 +40,9 @@
 <hr>
 
 <h3>2θ conversion between different energies</h3>
+<p style="font-size:0.9em; color:#666;">
+  Note: Cu Kα radiation has a wavelength of approximately 0.154 nm (Energy ≈ 8.048 keV).
+</p>
 <label>Energy 1 (keV):</label>
 <input id="energy_1" type="number" step="0.001" min="0.001" max="1000" value="12.4"><br>
 
