--- a/EnergyWavelength.html
+++ b/EnergyWavelength.html
@@ -38,7 +38,7 @@
 
 <hr>
 
-<h3>2θ conversion between different energies</h3>
+<h3>3. 2θ conversion between different energies</h3>
 <p style="font-size:0.9em; color:#666;">
   Note: Cu Kα radiation has a wavelength of approximately 0.154 nm (Energy ≈ 8.048 keV).
 </p>
@@ -57,7 +57,7 @@
 
 <hr>
 
-<h3>Relation between Energy, 2θ, d and q</h3>
+<h3>4. Relation between Energy, 2θ, d and q</h3>
 <p style="font-size:0.9em; color:#666;">
   Enter Energy (keV) and exactly one of 2θ (deg), d (nm) or q (nm⁻¹); the other two will be calculated.
 </p>
