--- a/SchmidFactor.html
+++ b/SchmidFactor.html
@@ -24,7 +24,18 @@
 
 <p id="result" style="margin-top:1em;"></p>
 
-<img id="plot" style="max-width:400px;display:block;margin-top:10px;">
+<!-- 外层灰色正方形边框 -->
+<div style="
+    width:420px;
+    height:420px;
+    border:3px solid #888;
+    margin-top:10px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+">
+  <img id="plot" style="max-width:400px; max-height:400px;">
+</div>
 
 <hr>
 
