--- a/SchmidFactor.html
+++ b/SchmidFactor.html
@@ -251,7 +251,7 @@ def draw_slip(Euler1, Euler2, Euler3):
         plt.text(pos_x, pos_y, j+1)
 #    
     
-    plt.scatter(0, 0, marker = 'o', edgecolors='k', linewidth = 3, s = 10, alpha = 0.8)
+    plt.scatter(0, 0, marker = 'o', facecolors='red', edgecolors='k', linewidth = 3, s = 10, alpha = 0.8)
     
 # 画图
 plt.figure(figsize=(10,10))
