--- a/SchmidFactor.html
+++ b/SchmidFactor.html
@@ -266,31 +266,77 @@ buf.seek(0)
 img_base64 = base64.b64encode(buf.read()).decode("ascii")
 plt.close()
 
-sf1 = Schmid(Euler1,Euler2,Euler3,0,0,0,1,2,-1,-1,0)[3]
-sf2 = Schmid(Euler1,Euler2,Euler3,0,0,0,1,-1,2,-1,0)[3]
-sf3 = Schmid(Euler1,Euler2,Euler3,0,0,0,1,-1,-1,2,0)[3]
+# -------- 定义所有 36 个 slip/twin 系 --------
+hkil = np.matrix([
+    [0,0,0,1,2,-1,-1,0],  # 1 basal
+    [0,0,0,1,-1,2,-1,0],  # 2 basal
+    [0,0,0,1,-1,-1,2,0],  # 3 basal
+    [0,1,-1,0,2,-1,-1,0], # 4 prismatic
+    [1,0,-1,0,-1,2,-1,0], # 5 prismatic
+    [-1,1,0,0,-1,-1,2,0], # 6 prismatic
+    [0,1,-1,1,2,-1,-1,0], # 7 pyramidal I <a>
+    [1,0,-1,1,-1,2,-1,0], # 8
+    [-1,1,0,1,-1,-1,2,0], # 9
+    [0,-1,1,1,2,-1,-1,0], # 10
+    [-1,0,1,1,-1,2,-1,0], # 11
+    [1,-1,0,1,-1,-1,2,0], # 12
+    [1,0,-1,1,2,-1,-1,-3], # 13 pyramidal I <c+a>
+    [1,0,-1,1,1,1,-2,-3],  # 14
+    [0,1,-1,1,1,1,-2,-3],  # 15
+    [0,1,-1,1,-1,2,-1,-3], # 16
+    [-1,1,0,1,-1,2,-1,-3], # 17
+    [-1,1,0,1,-2,1,1,-3],  # 18
+    [-1,0,1,1,-2,1,1,-3],  # 19
+    [-1,0,1,1,-1,-1,2,-3], # 20
+    [0,-1,1,1,-1,-1,2,-3], # 21
+    [0,-1,1,1,1,-2,1,-3],  # 22
+    [1,-1,0,1,1,-2,1,-3],  # 23
+    [1,-1,0,1,2,-1,-1,-3], # 24
+    [2,-1,-1,2,2,-1,-1,-3], # 25 pyramidal II <c+a>
+    [1,1,-2,2,1,1,-2,-3],   # 26
+    [-1,2,-1,2,-1,2,-1,-3], # 27
+    [-2,1,1,2,-2,1,1,-3],   # 28
+    [-1,-1,2,2,-1,-1,2,-3], # 29
+    [1,-2,1,2,1,-2,1,-3],   # 30
+    [1,0,-1,2,-1,0,1,1], # 31 Tension twin
+    [0,1,-1,2,0,-1,1,1], # 32
+    [-1,1,0,2,1,-1,0,1], # 33
+    [-1,0,1,2,1,0,-1,1], # 34
+    [0,-1,1,2,0,1,-1,1], # 35
+    [1,-1,0,2,-1,1,0,1]  # 36
+])
+
+labels = (
+    ["Basal"]*3 +
+    ["Prismatic"]*3 +
+    ["Pyramidal I <a>"]*6 +
+    ["Pyramidal I <c+a>"]*12 +
+    ["Pyramidal II <c+a>"]*6 +
+    ["Tension twin"]*6
+)
+
+lines = []
+for idx in range(hkil.shape[0]):
+    h,k,ii,ll,uu,vv,tt,ww = [int(x) for x in np.array(hkil[idx,:]).flatten()]
+    sf = float(Schmid(Euler1,Euler2,Euler3,
+                      h,k,ii,ll,uu,vv,tt,ww)[3])
+    line = f"{idx+1:2d}. ({h:2d} {k:2d} {ii:2d} {ll:2d})  [{uu:2d} {vv:2d} {tt:2d} {ww:2d}]  {labels[idx]:18s}  m = {sf: .3f}"
+    lines.append(line)
+
+sf_table = "\\n".join(lines)
 `);
 
-    // 从 Python 中取回结果
-    const img_base64 = pyodide.globals.get("img_base64");
-    const sf1 = pyodide.globals.get("sf1");
-    const sf2 = pyodide.globals.get("sf2");
-    const sf3 = pyodide.globals.get("sf3");
+  const img_base64 = pyodide.globals.get("img_base64");
+  const sf_table = pyodide.globals.get("sf_table");
 
-    resultP.textContent =
-      "Basal Schmid factors: " +
-      sf1.toFixed(3) + ", " +
-      sf2.toFixed(3) + ", " +
-      sf3.toFixed(3);
-
-    imgEl.src = "data:image/png;base64," + img_base64;
-
-  } catch (err) {
-    console.error(err);
-    resultP.textContent = "计算出错：" + err;
+  resultP.textContent = "All slip systems calculated.";
+  imgEl.src = "data:image/png;base64," + img_base64;
+  if (sfListEl) {
+    sfListEl.textContent = sf_table;
   }
 }
 </script>
+
   
 <hr>
 <p style="text-align:center; color:gray; font-size:12px;">
