--- a/SchmidFactor.html
+++ b/SchmidFactor.html
@@ -266,44 +266,44 @@ buf.seek(0)
 img_base64 = base64.b64encode(buf.read()).decode("ascii")
 plt.close()
 
-# -------- 定义所有 36 个 slip/twin 系 --------
+# -------- 36 个 slip / twin 系并计算 Schmid factor --------
 hkil = np.matrix([
     [0,0,0,1,2,-1,-1,0],  # 1 basal
-    [0,0,0,1,-1,2,-1,0],  # 2 basal
-    [0,0,0,1,-1,-1,2,0],  # 3 basal
+    [0,0,0,1,-1,2,-1,0],
+    [0,0,0,1,-1,-1,2,0],
     [0,1,-1,0,2,-1,-1,0], # 4 prismatic
-    [1,0,-1,0,-1,2,-1,0], # 5 prismatic
-    [-1,1,0,0,-1,-1,2,0], # 6 prismatic
+    [1,0,-1,0,-1,2,-1,0],
+    [-1,1,0,0,-1,-1,2,0],
     [0,1,-1,1,2,-1,-1,0], # 7 pyramidal I <a>
-    [1,0,-1,1,-1,2,-1,0], # 8
-    [-1,1,0,1,-1,-1,2,0], # 9
-    [0,-1,1,1,2,-1,-1,0], # 10
-    [-1,0,1,1,-1,2,-1,0], # 11
-    [1,-1,0,1,-1,-1,2,0], # 12
+    [1,0,-1,1,-1,2,-1,0],
+    [-1,1,0,1,-1,-1,2,0],
+    [0,-1,1,1,2,-1,-1,0],
+    [-1,0,1,1,-1,2,-1,0],
+    [1,-1,0,1,-1,-1,2,0],
     [1,0,-1,1,2,-1,-1,-3], # 13 pyramidal I <c+a>
-    [1,0,-1,1,1,1,-2,-3],  # 14
-    [0,1,-1,1,1,1,-2,-3],  # 15
-    [0,1,-1,1,-1,2,-1,-3], # 16
-    [-1,1,0,1,-1,2,-1,-3], # 17
-    [-1,1,0,1,-2,1,1,-3],  # 18
-    [-1,0,1,1,-2,1,1,-3],  # 19
-    [-1,0,1,1,-1,-1,2,-3], # 20
-    [0,-1,1,1,-1,-1,2,-3], # 21
-    [0,-1,1,1,1,-2,1,-3],  # 22
-    [1,-1,0,1,1,-2,1,-3],  # 23
-    [1,-1,0,1,2,-1,-1,-3], # 24
+    [1,0,-1,1,1,1,-2,-3],
+    [0,1,-1,1,1,1,-2,-3],
+    [0,1,-1,1,-1,2,-1,-3],
+    [-1,1,0,1,-1,2,-1,-3],
+    [-1,1,0,1,-2,1,1,-3],
+    [-1,0,1,1,-2,1,1,-3],
+    [-1,0,1,1,-1,-1,2,-3],
+    [0,-1,1,1,-1,-1,2,-3],
+    [0,-1,1,1,1,-2,1,-3],
+    [1,-1,0,1,1,-2,1,-3],
+    [1,-1,0,1,2,-1,-1,-3],
     [2,-1,-1,2,2,-1,-1,-3], # 25 pyramidal II <c+a>
-    [1,1,-2,2,1,1,-2,-3],   # 26
-    [-1,2,-1,2,-1,2,-1,-3], # 27
-    [-2,1,1,2,-2,1,1,-3],   # 28
-    [-1,-1,2,2,-1,-1,2,-3], # 29
-    [1,-2,1,2,1,-2,1,-3],   # 30
-    [1,0,-1,2,-1,0,1,1], # 31 Tension twin
-    [0,1,-1,2,0,-1,1,1], # 32
-    [-1,1,0,2,1,-1,0,1], # 33
-    [-1,0,1,2,1,0,-1,1], # 34
-    [0,-1,1,2,0,1,-1,1], # 35
-    [1,-1,0,2,-1,1,0,1]  # 36
+    [1,1,-2,2,1,1,-2,-3],
+    [-1,2,-1,2,-1,2,-1,-3],
+    [-2,1,1,2,-2,1,1,-3],
+    [-1,-1,2,2,-1,-1,2,-3],
+    [1,-2,1,2,1,-2,1,-3],
+    [1,0,-1,2,-1,0,1,1], # 31 tension twin
+    [0,1,-1,2,0,-1,1,1],
+    [-1,1,0,2,1,-1,0,1],
+    [-1,0,1,2,1,0,-1,1],
+    [0,-1,1,2,0,1,-1,1],
+    [1,-1,0,2,-1,1,0,1]
 ])
 
 labels = (
@@ -324,18 +324,23 @@ for idx in range(hkil.shape[0]):
     lines.append(line)
 
 sf_table = "\\n".join(lines)
-`);
+    `);
 
-  const img_base64 = pyodide.globals.get("img_base64");
-  const sf_table = pyodide.globals.get("sf_table");
+    const img_base64 = pyodide.globals.get("img_base64");
+    const sf_table = pyodide.globals.get("sf_table");
 
-  resultP.textContent = "All slip systems calculated.";
-  imgEl.src = "data:image/png;base64," + img_base64;
-  if (sfListEl) {
-    sfListEl.textContent = sf_table;
+    resultP.textContent = "All slip systems calculated.";
+    imgEl.src = "data:image/png;base64," + img_base64;
+    if (sfListEl) {
+      sfListEl.textContent = sf_table;
+    }
+  } catch (err) {
+    console.error(err);
+    resultP.textContent = "Error during calculation: " + err;
   }
 }
 </script>
+
 
   
 <hr>
