--- a/SchmidFactor.html
+++ b/SchmidFactor.html
@@ -21,7 +21,7 @@ For academic reference only.
 <body>
 <h1>Schmid Factor Calculator</h1>
 
-<p id="status" style="color:blue;">正在加载 Pyodide…</p>
+<p id="status" style="color:blue;">Loading Pyodide…</p>
 
 <label>Euler1 (deg)：</label>
 <input id="E1" type="number" value="10"><br>
@@ -92,6 +92,8 @@ async function runCalc() {
 
   const resultP = document.getElementById("result");
   const imgEl = document.getElementById("plot");
+  const sfListEl = document.getElementById("sf_list");
+
 
   imgEl.src = "";
   resultP.textContent = "Calculating…";
