--- a/SchmidFactor.html
+++ b/SchmidFactor.html
@@ -120,7 +120,7 @@ async function runCalc() {
 # -----------------------------------------------------------
 
 import numpy as np
-import math, io, base64
+import math, io, base64, json
 import matplotlib
 matplotlib.use("Agg")
 import matplotlib.pyplot as plt
